--- a/source/less/blocks/addition.less
+++ b/source/less/blocks/addition.less
@@ -33,7 +33,7 @@
   position: relative;
   width: 260px;
   font-size: 24px;
-  font-weight: lighter;
+  font-weight: 400;
   margin-top: 10px;
   color: black;
 
