--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -5,7 +5,7 @@
   font-size: 16px;
   line-height: 20px;
   color: black;
-  font-weight: bolder;
+  font-weight: 700;
 
   @media (min-width: @tablet-width) {
     width: 165px;
@@ -29,6 +29,7 @@
   height: 363px;
   min-height: 363px;
   background-image: url("../img/bg-map-mobile@1x.png");
+  background-color: #fdf7f0;
   background-size: cover;
   vertical-align: bottom;
   border: none;
@@ -109,7 +110,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-top: 16px;
+    margin-top: 10px;
     padding-top: 14px;
     text-align: left;
   }
