--- a/source/less/blocks/dietary.less
+++ b/source/less/blocks/dietary.less
@@ -112,7 +112,7 @@
   padding-left: 70px;
   text-transform: uppercase;
   font-size: 24px;
-  font-weight: lighter;
+  font-weight: 400;
   padding-top: 30px;
   padding-bottom: 10px;
 
@@ -214,7 +214,7 @@
   background-color: #f2f2f2;
   padding-bottom: 23px;
   font-size: 14px;
-  font-weight: lighter;
+  font-weight: 400;
   font-family: "Arial", "Helvetica", sans-serif;
   border-bottom: 1px solid #d9d9d9;
   color: #444444;
