--- a/source/less/blocks/food-price.less
+++ b/source/less/blocks/food-price.less
@@ -1,7 +1,7 @@
 .food-price {
   margin: 0;
   font-size: 14px;
-  font-weight: lighter;
+  font-weight: 400;
   text-transform: uppercase;
   margin-top: 6px;
   margin-left: 47px;
