--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -94,7 +94,7 @@
 .form__label {
   margin-right: 15px;
   font-size: 16px;
-  font-weight: lighter;
+  font-weight: 400;
   text-transform: uppercase;
   padding-top: 6px;
   padding-bottom: 10px;
@@ -375,6 +375,7 @@
 }
 
 .form__title {
+  color: black;
   display: flex;
   align-items: flex-start;
   position: relative;
