--- a/source/less/blocks/page-catalog.less
+++ b/source/less/blocks/page-catalog.less
@@ -78,16 +78,17 @@
     width: 293px;
     padding-right: 30px;
     top: -11px;
-    height: 364px;
+    height: 369px;
     position: relative;
+    margin-bottom: 6px;
   }
 
   @media (min-width: @desktop-width) {
     margin-right: 0;
     margin-top: 115px;
-    height: 365px;
+    height: 374px;
     margin-bottom: 10px;
-    width: 213px;
+    width: 212px;
     top: 29px;
   }
 }
