--- a/source/less/blocks/proof.less
+++ b/source/less/blocks/proof.less
@@ -31,7 +31,7 @@
   margin-bottom: 28px;
   font-size: 36px;
   font-style: normal;
-  font-weight: lighter;
+  font-weight: 400;
   margin-left: auto;
   margin-right: auto;
   width: 280px;
@@ -167,7 +167,7 @@
 
 .proof__case-number {
   font-size: 24px;
-  font-weight: lighter;
+  font-weight: 400;
   text-align: center;
 
   @media screen and (min-width: @tablet-width) {
@@ -199,7 +199,7 @@
   text-align: center;
   margin: 0;
   font-family: "Arial", "Helvetica", sans-serif;
-  font-weight: lighter;
+  font-weight: 400;
   color: #444444;
   position: absolute;
   left: 17px;
