--- a/source/less/blocks/special-offer.less
+++ b/source/less/blocks/special-offer.less
@@ -1,9 +1,10 @@
 .special-offer {
   position: relative;
+  background-color: #78bc4f;
   margin-top: 20px;
   .container();
   background-image: url("../img/gift-photo-mobile@1x.jpg");
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   width: 240px;
   height: 290px;
@@ -38,7 +39,6 @@
   @media (min-width: @tablet-width) {
     width: 668px;
     height: 198px;
-    background-size: contain;
     background-image: url("../img/gift-photo-tablet@1x.jpg");
     background-position: center center;
     margin-bottom: 72px;
