--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -45,7 +45,7 @@
   padding-left: 80px;
   margin-bottom: 20px;
   font-family: "Arial", "Helvetica", sans-serif;
-  font-weight: lighter;
+  font-weight: 400;
   font-size: 14px;
   color: #444444;
   padding-bottom: 6px;
