--- a/source/less/blocks/slogan.less
+++ b/source/less/blocks/slogan.less
@@ -47,7 +47,7 @@
   width: 280px;
   font-size: 36px;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   line-height: 36px;
   padding-top: 30px;
 
@@ -71,7 +71,7 @@
   font-size: 14px;
   margin-bottom: 0;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   line-height: 18px;
   padding-left: 59px;
   padding-right: 59px;
